[gd_scene load_steps=12 format=3 uid="uid://cnu201dhmsx2j"]

[ext_resource type="Script" path="res://addons/quest_system/scripts/editor/main_panel.gd" id="1_gj44q"]
[ext_resource type="Script" path="res://addons/quest_system/scripts/system/quest_data.gd" id="2_cgn7m"]
[ext_resource type="Script" path="res://addons/quest_system/scripts/editor/node_tree.gd" id="2_ir3ok"]
[ext_resource type="Script" path="res://addons/quest_system/scripts/editor/variable_tree.gd" id="3_ly8yu"]
[ext_resource type="Script" path="res://addons/quest_system/scripts/editor/graph_edit.gd" id="3_rfcal"]
[ext_resource type="PackedScene" uid="uid://bbm37xscdri5y" path="res://addons/quest_system/scenes/graph_node.tscn" id="4_akk4m"]
[ext_resource type="Script" path="res://addons/quest_system/scripts/editor/open_quest_action.gd" id="6_68tno"]
[ext_resource type="Script" path="res://addons/quest_system/scripts/editor/new_quest_action.gd" id="7_pwrqb"]
[ext_resource type="Script" path="res://addons/quest_system/scripts/editor/save_quest_action.gd" id="8_ucs87"]
[ext_resource type="Script" path="res://addons/quest_system/scripts/editor/quest_data_action.gd" id="9_a74h3"]

[sub_resource type="Resource" id="Resource_uf6e0"]
script = ExtResource("2_cgn7m")
quest_name = ""
quest_description = ""
quest_variables = {}
start_action = &""
actions = {
"{a17a27d3-ae71-11ec-9329-806e6f6e6963}": {
"class": Object(RefCounted,"script":Resource("res://addons/quest_system/scripts/system/actions/logic_start.gd"),"quest_name":"","quest_description":"","folder_name":&"Logic","folder_position":0,"node_color":Color(1, 0.498039, 0.313726, 1),"node_show_left_slot":false,"node_show_right_slot":true,"name":&"QuestStart","node_caption":"","ignore":false,"variables":null)

}
}
graph_edit_zoom = 1.0
graph_edit_scroll_offset = Vector2(0, 0)

[node name="MainPanel" type="MarginContainer" node_paths=PackedStringArray("node_tree", "graph_edit", "variable_tree", "file_label", "new_button", "open_button", "save_button", "quest_data_action", "open_quest_action", "save_quest_action", "new_quest_action")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3
script = ExtResource("1_gj44q")
quest_data = SubResource("Resource_uf6e0")
node_tree = NodePath("WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/NodeTree")
graph_edit = NodePath("WindowContainer/BodyContainer/GraphEdit")
variable_tree = NodePath("WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/VBoxContainer/VariableTree")
file_label = NodePath("WindowContainer/BodyContainer/GraphEdit/MarginContainer/FileLabel")
new_button = NodePath("WindowContainer/BodyContainer/VBoxContainer/MenuContainer/New")
open_button = NodePath("WindowContainer/BodyContainer/VBoxContainer/MenuContainer/Open")
save_button = NodePath("WindowContainer/BodyContainer/VBoxContainer/MenuContainer/Save")
quest_data_action = NodePath("Actions/QuestDataAction")
open_quest_action = NodePath("Actions/OpenQuestAction")
save_quest_action = NodePath("Actions/SaveQuestAction")
new_quest_action = NodePath("Actions/NewQuestAction")

[node name="WindowContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="BodyContainer" type="HSplitContainer" parent="WindowContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200

[node name="VBoxContainer" type="VBoxContainer" parent="WindowContainer/BodyContainer"]
layout_mode = 2

[node name="MenuContainer" type="HBoxContainer" parent="WindowContainer/BodyContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="New" type="Button" parent="WindowContainer/BodyContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "New"

[node name="Open" type="Button" parent="WindowContainer/BodyContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Open"

[node name="Save" type="Button" parent="WindowContainer/BodyContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Save"

[node name="VSplitContainer" type="VSplitContainer" parent="WindowContainer/BodyContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = -300

[node name="NodeTree" type="Tree" parent="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer"]
custom_minimum_size = Vector2(150, 64)
layout_mode = 2
size_flags_vertical = 3
hide_root = true
script = ExtResource("2_ir3ok")

[node name="VBoxContainer" type="VBoxContainer" parent="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="VariableTree" type="Tree" parent="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/VBoxContainer" node_paths=PackedStringArray("add_button", "type_selector", "delete_button")]
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_root = true
script = ExtResource("3_ly8yu")
add_button = NodePath("../HBoxContainer/AddVariable")
type_selector = NodePath("../HBoxContainer/AddOption")
delete_button = NodePath("../HBoxContainer/DeleteVariable")

[node name="HBoxContainer" type="HBoxContainer" parent="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="AddVariable" type="Button" parent="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Add"

[node name="AddOption" type="OptionButton" parent="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "String"
popup/item_0/id = 4
popup/item_1/text = "Bool"
popup/item_1/id = 1
popup/item_2/text = "Integer"
popup/item_2/id = 2
popup/item_3/text = "Float"
popup/item_3/id = 3

[node name="DeleteVariable" type="Button" parent="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Delete"

[node name="GraphEdit" type="GraphEdit" parent="WindowContainer/BodyContainer"]
layout_mode = 2
size_flags_vertical = 3
right_disconnects = true
script = ExtResource("3_rfcal")
graph_node = ExtResource("4_akk4m")

[node name="MarginContainer" type="MarginContainer" parent="WindowContainer/BodyContainer/GraphEdit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="FileLabel" type="Label" parent="WindowContainer/BodyContainer/GraphEdit/MarginContainer"]
modulate = Color(1, 1, 1, 0.239216)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 30
text = "Quest: Not Saved"
vertical_alignment = 2

[node name="FooterContainer" type="HBoxContainer" parent="WindowContainer"]
layout_mode = 2

[node name="Actions" type="Node" parent="."]

[node name="OpenQuestAction" type="Node" parent="Actions"]
script = ExtResource("6_68tno")

[node name="SaveFileDialog" type="FileDialog" parent="Actions/OpenQuestAction"]
popup_window = true
ok_button_text = "Save"
dialog_hide_on_ok = true
filters = PackedStringArray("*.tres, *.res ; Quest Data Resources")

[node name="OpenFileDialog" type="FileDialog" parent="Actions/OpenQuestAction"]
title = "Open a File"
size = Vector2i(312, 154)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
filters = PackedStringArray("*.tres, *.res ; Quest Data Resources")

[node name="SaveConfirmationDialog" type="ConfirmationDialog" parent="Actions/OpenQuestAction"]
size = Vector2i(300, 100)
unresizable = true
popup_window = true
ok_button_text = "Save"
dialog_text = "Save the current quest?"

[node name="NewQuestAction" type="Node" parent="Actions"]
script = ExtResource("7_pwrqb")

[node name="SaveFileDialog" type="FileDialog" parent="Actions/NewQuestAction"]
size = Vector2i(312, 154)
popup_window = true
ok_button_text = "Save"
dialog_hide_on_ok = true
filters = PackedStringArray("*.tres, *.res ; Quest Data Resources")

[node name="SaveConfirmationDialog" type="ConfirmationDialog" parent="Actions/NewQuestAction"]
size = Vector2i(300, 100)
unresizable = true
popup_window = true
ok_button_text = "Save"
dialog_text = "Save the current quest?"

[node name="SaveQuestAction" type="Node" parent="Actions"]
script = ExtResource("8_ucs87")

[node name="SaveFileDialog" type="FileDialog" parent="Actions/SaveQuestAction"]
size = Vector2i(312, 154)
popup_window = true
ok_button_text = "Save"
dialog_hide_on_ok = true
filters = PackedStringArray("*.tres, *.res ; Quest Data Resources")

[node name="QuestDataAction" type="Node" parent="Actions"]
script = ExtResource("9_a74h3")

[connection signal="item_activated" from="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/NodeTree" to="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/NodeTree" method="_on_item_activated"]
[connection signal="item_edited" from="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/VBoxContainer/VariableTree" to="WindowContainer/BodyContainer/VBoxContainer/VSplitContainer/VBoxContainer/VariableTree" method="_on_item_edited"]
[connection signal="connection_request" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_connection_request"]
[connection signal="delete_nodes_request" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_disconnection_request"]
[connection signal="end_node_move" from="WindowContainer/BodyContainer/GraphEdit" to="WindowContainer/BodyContainer/GraphEdit" method="_on_end_node_move"]
